truncate project name and author name, fixed padding for date/status

--- a/app/NovaWeb/src/modules/editors/jobs/jobs.scss
+++ b/app/NovaWeb/src/modules/editors/jobs/jobs.scss
@@ -141,19 +141,47 @@
 
 }
 
-.jobs__firstrow{
+.jobs__firstrow {
     margin-top: 10px;
 }
 
-.jobs__secondrow{
+.jobs__secondrow {
     margin-top: 3px;
 }
 
-.jobs__thirdrow{
+.jobs__thirdrow {
     margin-top: 3px;
 }
 
 
-.fonticon2-project.jobs__projecticon--size::before{
+.fonticon2-project.jobs__projecticon--size::before {
     font-size:15px;
+}
+
+.jobs__projectname {
+    width:50%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    display: inline-block;
+    position:absolute;
+    padding-left: 5px;
+}
+
+.jobs__authorname {
+    width:40%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    display: inline-block;
+    position:absolute;
+    padding-left: 5px;
+}
+
+.jobs__date {
+    padding-left: 5px;
+}
+
+.jobs_status {
+    padding-left: 5px;
 }
